# MusicPlayer

./: .gitignore  CMakeLists.txt  MusicPlayer.cpp  MusicPlayer.h  main.cpp
required/: play_list.json
